vps/keycloak/service.yml
kind: Service
apiVersion: v1
metadata:
  name: keycloak-http
  namespace: keycloak
  labels:
    app: keycloak
  annotations:
    description: The web server's http port.
spec:
  ports:
    - name: keycloak-http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
    component: keycloak
  type: ClusterIP
  sessionAffinity: None
