vps/keycloak/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: keycloak-ingress
  namespace: keycloak
  labels:
    app: keycloak
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'on'
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: '1'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.org/ssl-services: keycloak
spec:
  tls:
    - hosts:
        - keycloak.teknichrono.fr
  rules:
    - host: keycloak.teknichrono.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: keycloak-http
              servicePort: 8080
status:
  loadBalancer:
    ingress:
      - ip: 127.0.0.1
